build.gradle: specify the Concurrent Mark Sweep (CMS) garbage collector